--- a/fizzbuzz javascript/fizzbuzz.html
+++ b/fizzbuzz javascript/fizzbuzz.html
@@ -6,7 +6,24 @@
 </head>
 <body>
   <script>
-  
+  let answer = parseInt(prompt("Please enter a number to count up to"));
+  // console.log(answer)
+  let counter = 1;
+  while(counter <= answer) {
+    if (counter % 3 == 0 && counter % 5 == 0) {
+      console.log("fizzbuzz")
+    }
+    else if (counter % 3 == 0) {
+      console.log("fizz")
+    }
+    else if (counter % 5 == 0) {
+      console.log("buzz")
+    } 
+    else {
+      console.log(counter)
+    }
+    counter++;
+  }
   </script>
 </body>
 </html>
